Fix registration changes not showing

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -12,3 +12,10 @@ span.select {
 .field .is-pulled-right {
   margin-left: auto;
 }
+
+.loader-centered {
+  display: block;
+  margin: auto;
+  width: 5rem;
+  margin-top: 5rem
+}
